[REFACTOR] PostServiceTest:Remove unnecessary usage of eq(), remove public modifier, reword .get(0) into .getFirst()